[tool.poetry]
name = "data_warehouse_utils"
version = "0.1.0"
description = ""
authors = ["Miguel Carvalho <miguelc@tuta.io>"]

[tool.poetry.dependencies]
python = "^3.9"
google-cloud = "^0.34.0"
boto3 = "^1.26.84"
google-cloud-storage = "^2.7.0"
isort = "^5.12.0"
black = "^23.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.12.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
